# tarjetas-visita

./: .gitignore  AGENTS.md  LICENSE  README.md  repomix.config.json
.cursor/rules/: project-ai-workflow.mdc
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
code/: README.md  pyproject.toml
code/src/tarjetasvisita/: config.py  export.py  extraction.py  ingest.py  normalization.py  schemas.py
code/src/tarjetasvisita/api/: app.py
code/src/tarjetasvisita/llm/: reconcile.py
code/src/tarjetasvisita/ocr/: mistral_ocr.py
code/src/tarjetasvisita/pipeline/: service.py
code/src/tarjetasvisita/storage/: sqlite.py
code/tests/: test_extraction.py  test_normalization.py  test_pipeline_storage_exports.py
code/web/: index.html  package-lock.json  package.json  tsconfig.json
code/web/scripts/: build.mjs
code/web/src/: index.html  styles.css
code/web/src/app/: App.tsx  api.ts  types.ts
code/web/src/assets/: app.js  styles.css
code/web/src/components/: ContactEditor.tsx  ContactsTable.tsx  ContactsToolbar.tsx  DocumentPreview.tsx  OcrAssistPanel.tsx  Panel.tsx  StatsGrid.tsx
code/web/src/lib/: ocrSuggestions.ts
framework/: CODEX.md
framework/agents/: admin.md  architect.md  auth.md  backend.md  database.md  devops.md  frontend.md  qa.md
framework/docs/: AI_DEV_OPERATING_SYSTEM.md  app-starter-framework.md  learning-process.md  project-status.md  stack.md  token-optimization.md  workflow.md
framework/prompts/: debug-bug.md  new-feature.md
scripts/: create_github_repo.sh
(+7 files in other folders)
